[project]
name = "google-trends-agent"
version = "0.1.0"
description = "AI Agent that is designed to surface the newest Google Trends in realtime"
authors = [
    {name = "Yehia Elshater",email = "elshater@google.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[adk,agent-engines] (>=1.104.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "google-genai (>=1.26.0,<2.0.0)",
    "google-cloud-bigquery (>=3.35.0,<4.0.0)",
    "google-adk (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest>9.0.0",
    "pytest-asyncio>=0.23.0"
]


[tool.ruff]
extend = ".../.../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["google_trends_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
