[project]
name = "image-scoring"
version = "0.1.0"
description = "The image scoring generates an image for a news article, evaluates the image agaionst a set of rules and regenerates the image if necessary ."
authors = [
    {name = "Kishore Jagannath", email = "kishorerj@google.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-cloud-aiplatform[adk,agent-engines]>=1.88.0,<=1.110.0",
    "google-genai>=1.9.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "google-adk>=0.5.0",
    "pandas>=2.1.1",
    "pillow>=10.3.0"
]

[dependency-groups]
dev = [
    "google-adk[eval]>=1.3.0",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.26.0",
    "agent-starter-pack>=0.14.1",
]
deployment = [
    "absl-py~=2.2.1",
    "pandas>=2.1.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

# This configuration file is used by goo.gle/agent-starter-pack to power remote templating.
# It defines the template's properties and settings.
[tool.agent-starter-pack]
example_question = "a peaceful mountain landscape at sunset"

[tool.agent-starter-pack.settings]
agent_directory = "image_scoring"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
