[project]
name = "machine_learning_engineering"
version = "0.1.0"
description = "MLE-STAR: A novel machine learning engineering (MLE) agent to automate the implementation of ML models."
authors = ["Jiefeng Chen <jiefengc@google.com>", "Raj Sinha <sinharaj@google.com", "Jaehyun Nam <jaehyunnam@google.com>", "Jinsung Yoon <jinsungyoon@google.com>"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies=[
    "google-adk = ^1.5.0",
    "google-genai = ^1.9.0",
    "pydantic = ^2.10.6",
    "python-dotenv = ^1.0.1",
    "google-cloud-aiplatform[adk, agent-engines]>=1.93.0",
    "numpy = ^2.2.3",
    "pandas = ^2.3.1",
    "scikit-learn = ^1.7.1",
    # The CPU version of PyTorch is installed here. Change this is you need GPUs, or
    # want to use PyTorch on a different hardware architecture or CPU.
    # (https://download.pytorch.org/whl)
    "torch>=2.7.1"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "google-adk[eval]>=1.5.0",
    "google-cloud-aiplatform[evaluation]>=1.93.0",
]
deployment = [
    "absl-py>=2.2.1",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["machine_learning_engineering"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
