[project]
name = "market-research-agent"
version = "0.1.0"
description = "A multi-agent system that performs comprehensive market research for any location and business type using Google Places API."
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "google-genai>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "google-adk[eval]>=1.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["market_research_agent"]

[tool.hatch.build.targets.wheel]
packages = ["market_research_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
