[project]
name = "mcp-iam-authn-agent"
version = "0.1.0"
description = "Prebuilt agent which operationalizes any MCP server running in Cloud Run behind IAM authentication."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.12.0",
    "google-auth==2.40.3",
    "pyjwt==2.10.1",
]
