[project]
name = "openregistry-belgium-kbo-bce"
version = "0.1.0"
description = "ADK agent with live access to KBO/BCE — Crossroads Bank for Enterprises (Belgium) via the OpenRegistry MCP server"
authors = [
    { name = "Sophymarine" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "google-adk>=1.13.0",
    "google-genai>=1.17.0",
    "python-dotenv>=1.1.0",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["openregistry_be"]

[tool.agent-starter-pack.settings]
agent_directory = "openregistry_be"
deployment_targets = ["agent_engine", "cloud_run"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
